Clipping issue

--- a/src/Styles/ChatWindow.css
+++ b/src/Styles/ChatWindow.css
@@ -58,7 +58,6 @@
     flex: 1;
     height: 69px;
     width: 275px;
-    margin: 5px;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
@@ -69,22 +68,18 @@
     background-color: white;
     display: flex;
     flex: 1;
-    padding: 10px;
+    width: 95%;
     flex-direction: column;
     align-self: flex-start;
-    border-style: dashed;
-    border-color: black;
-    border-width: thick;
 }
 
 .Action-Row{
     background-color: white;
     display: flex;
     flex: 1;
-    padding: 10px;
     flex-direction: column;
     align-self: flex-start;
     border-style: dashed;
-    border-color: black;
+    border-color: blue;
     border-width: thick;
 }
